--- a/composer.json
+++ b/composer.json
@@ -10,21 +10,17 @@
         }
     },
     "description": "Pagination library without dependencies.",
-    "homepage": "http://github.com/Rayne/Pagination",
-    "keywords": ["pagination", "paginator"],
+    "keywords": ["filter-pagination", "pagination", "paginator", "search-pagination"],
     "license": "TODO",
     "name": "Rayne/Pagination",
     "require": {
-        "php": "~5.3"
+        "php": ">=5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "@stable"
     },
     "support": {
-        "issues": "http://github.com/Rayne/Pagination/issues",
-        "source": "http://github.com/Rayne/Pagination"
-    },
-    "time": "2014-07-01",
-    "type": "library",
-    "version": "0.0.0-dev"
+        "issues": "http://github.com/rayne/pagination/issues",
+        "source": "http://github.com/rayne/pagination"
+    }
 }
