--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Rayne\\Pagination\\": "src/Rayne/Pagination"
+            "Rayne\\Pagination\\": "src"
         }
     },
     "description": "Pagination library without dependencies.",
