--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "php": ">=5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "friendsofphp/php-cs-fixer": "^2.7"
+        "friendsofphp/php-cs-fixer": "^2.7",
+        "phpunit/phpunit": "^6.0"
     },
     "support": {
         "issues": "http://github.com/rayne/pagination/issues",
